<resources>
    <string name="action_settings">Settings</string>
    <string name="username">名称</string>
    <string name="bind_table_card">绑定桌牌</string>
    <string name="help">使用帮助</string>
    <string name="more">更多</string>
    <string name="title">旺助手</string>
    <string name="food_manager">菜品管理</string>
    <string name="card_manager">桌牌管理</string>
    <string name="san">扫一扫</string>
    <string name="all">全部</string>
    <string name="daiqueding">待确定</string>
    <string name="eating">就餐中</string>
    <string name="idle">空闲</string>
    <string name="all_waiter">全部服务员</string>
    <string name="table_no">x号桌</string>
    <string name="login">立即登录</string>
    <string name="about_us">关于我们</string>
    <string name="change_pwd">修改密码</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="card_deviceId">桌牌设备号</string>
    <string name="waiter">服务员</string>
    <string name="cardNo">桌号</string>
    <string name="loading">正在登陆</string>
    <string name="ordered">已下单</string>
    <string name="unorder">待下单</string>
    <string name="addfood">加菜</string>
    <string name="bind_table_error">不能绑定其他商户桌牌</string>
    <string name="insufficient_permission">扫描到桌牌，但权限不够</string>
    <string name="dish_count">%s道菜</string>
    <string name="title_table_no">%s号桌</string>
    <string name="txt_next_order">确认订单&amp;下一单</string>
    <string name="total_collection_order_tip">共计%1$s道菜 ￥%2$s</string>
    <string name="contain_order_tip">此桌还有%s个订单的菜品未确认。此款是否包含此订单？不包含则此订单作废</string>
    <string name="hide">隐藏</string>
    <string name="display">显示</string>
    <string name="scanning">扫描设备...</string>
    <string name="select_device">选择连接的设备</string>
    <string name="none_paired">没有匹配的设备</string>
    <string name="none_found">没有找到设备</string>
    <string name="title_paired_devices">已匹配设备</string>
    <string name="title_other_devices">其它可用设备</string>
    <string name="button_scan">扫描设备</string>
    <string name="title_connecting">正在连接...</string>
    <string name="title_connected_to">已连接: </string>
    <string name="title_not_connected">没有连接</string>
    <string name="bt_not_enabled_leaving">蓝牙没有启动，退出程序</string>
    <string name="print_count_tip">第%1$s次打印</string>
    <string name="print_detail_order_id_tip">打印单号:%s</string>
    <string name="print_print_time_tip">打印时间:%s</string>
    <string name="print_order_time_tip">下单时间:%s</string>
    <string name="dish_description_hint">请输入菜品描述</string>
    <string name="dish_package_description_hint">请输入套餐描述</string>
    <string name="finish">完成</string>
    <string name="strToastYourAreTheLatestVersion">你已经是最新版了</string>
    <string name="strToastCheckUpgradeError">检查新版本失败，请稍后重试</string>
    <string name="strToastCheckingUpgrade">正在检查，请稍候...</string>
    <string name="strNotificationDownloading">正在下载</string>
    <string name="strNotificationClickToView">点击查看</string>
    <string name="strNotificationClickToInstall">点击安装</string>
    <string name="strNotificationClickToRetry">点击重试</string>
    <string name="strNotificationDownloadSucc">下载完成</string>
    <string name="strNotificationDownloadError">下载失败</string>
    <string name="strNotificationHaveNewVersion">有新版本</string>
    <string name="strNetworkTipsMessage">你已切换到移动网络，是否继续当前下载？</string>
    <string name="strNetworkTipsTitle">网络提示</string>
    <string name="strNetworkTipsConfirmBtn">继续下载</string>
    <string name="strNetworkTipsCancelBtn">取消</string>
    <string name="strUpgradeDialogVersionLabel">版本</string>
    <string name="strUpgradeDialogFileSizeLabel">包大小</string>
    <string name="strUpgradeDialogUpdateTimeLabel">更新时间</string>
    <string name="strUpgradeDialogFeatureLabel">更新说明</string>
    <string name="strUpgradeDialogUpgradeBtn">立即更新</string>
    <string name="strUpgradeDialogInstallBtn">安装</string>
    <string name="strUpgradeDialogRetryBtn">重试</string>
    <string name="strUpgradeDialogContinueBtn">继续</string>
    <string name="strUpgradeDialogCancelBtn">下次再说</string>
    <string name="cancel_empty_dish">取消沽清(%d)</string>
    <string name="cancel_recommend_dish">取消推荐(%d)</string>
    <string name="cancel_empty_tip">取消沽清</string>
    <string name="cancel_recommend_tip">取消推荐</string>
    <string name="selected_table_count">你已选择%d桌</string>
    <string name="all_table_info">全部%d桌</string>
    <string name="edit_template_text">管理推荐菜</string>
    <string name="text_add_recommend_dish">添加推荐菜</string>
    <string name="manage_category">管理分类</string>
    <string name="home_title">成都消费市场智能服务平台</string>
    <string name="home_hint">打造放心、舒心、安心利民工程</string>
</resources>