<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/primary_color">

        <ImageView
            android:id="@+id/back"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:src="@drawable/left_bg" />

        <TextView
            android:id="@+id/actionbar_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>


    <ExpandableListView
        android:id="@+id/list_order_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_bar"
        android:layout_below="@id/title_bar"
        android:divider="@color/divider_color"
        android:childIndicator="@null"
        android:dividerHeight="1dp"
        android:groupIndicator="@null"
        android:scrollbars="none" />


    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/collection_bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider_color"
                />


            <TextView
                android:id="@+id/total_dish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:text="共计六道菜" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">


                <TextView
                    android:id="@+id/print_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/print_print_time_tip" />

                <TextView
                    android:id="@+id/print_count"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:layout_marginRight="10dp"
                    android:text="@string/print_count_tip" />


            </RelativeLayout>

            <TextView
                android:id="@+id/order_number"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:text="订单号" />





            <TextView
                android:id="@+id/print_order"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/primary_red"
                android:gravity="center"
                android:text="打印"
                android:textColor="@color/white" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>